--- a/index.html
+++ b/index.html
@@ -2,22 +2,81 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Search</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./environment.js"></script>
-    <script defer src="./script.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Movie Search</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="./environment.js"></script>
+  <script defer src="./script.js"></script>
 </head>
 
 <body>
-
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+        <!-- <a class="navbar-brand" href="javascript:void(0)">MovieSearch</a> -->
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mynavbar">
+        <a class="navbar-brand me-auto" href="javascript:void(0)">MovieSearch</a>
+        <!-- <ul class="navbar-nav me-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:void(0)">Link</a>
+        </li>
+      </ul> -->
+        <form id="search-form" class="d-flex">
+          <!-- <label>Title</label> -->
+          <input id="search-input" type="text" class="form-control me-2" placeholder="Search">
+          <input type="submit" value="Search" class="btn btn-primary me-2">
+          <select id="select-lang" class="form-select">
+            <option value="en" selected>English</option>
+            <option value="ca">Valencià</option>
+            <option value="it">Italiano</option>
+            <option value="es">Español</option>
+          </select>
+        </form>
+      </div>
+  </nav>
+  <div class="container">
+    <div class="pagination-bar">
+      <ul class="pagination justify-content-center" style="margin:20px 0">
+        <li class="page-item"><button class="page-link">Previous</button></li>
+        <li class="page-item active"><button class="page-link">1</button></li>
+        <li class="page-item"><button class="page-link">2</button></li>
+        <li class="page-item "><span class="page-link">...</span></li>
+        <li class="page-item"><button class="page-link">3</button></li>
+        <li class="page-item"><button class="page-link">Next</button></li>
+      </ul>
+    </div>
+    <div id="container" class="container"></div>
+    <div class="pagination-bar">
+      <ul class="pagination justify-content-center" style="margin:20px 0">
+        <li class="page-item"><button class="page-link">Previous</button></li>
+        <li class="page-item active"><button class="page-link">1</button></li>
+        <li class="page-item"><button class="page-link">2</button></li>
+        <li class="page-item"><button class="page-link">3</button></li>
+        <li class="page-item"><button class="page-link">Next</button></li>
+      </ul>
+    </div>
+  </div>
+  <footer class="mt-5 p-4 bg-dark text-white text-center">
+    <p>
+      Powered by <a href="https://www.themoviedb.org" target="_blank">themoviedb.org</a>
+  </footer>
+  </p>
 </body>
 
 </html>
