--- a/index.html
+++ b/index.html
@@ -52,24 +52,24 @@
   </nav>
   <div class="container">
     <div class="pagination-bar">
-      <ul class="pagination justify-content-center" style="margin:20px 0">
+      <!-- <ul class="pagination justify-content-center" style="margin:20px 0">
         <li class="page-item"><button class="page-link">Previous</button></li>
         <li class="page-item active"><button class="page-link">1</button></li>
         <li class="page-item"><button class="page-link">2</button></li>
         <li class="page-item "><span class="page-link">...</span></li>
         <li class="page-item"><button class="page-link">3</button></li>
         <li class="page-item"><button class="page-link">Next</button></li>
-      </ul>
+      </ul> -->
     </div>
     <div id="container" class="container"></div>
     <div class="pagination-bar">
-      <ul class="pagination justify-content-center" style="margin:20px 0">
+      <!-- <ul class="pagination justify-content-center" style="margin:20px 0">
         <li class="page-item"><button class="page-link">Previous</button></li>
         <li class="page-item active"><button class="page-link">1</button></li>
         <li class="page-item"><button class="page-link">2</button></li>
         <li class="page-item"><button class="page-link">3</button></li>
         <li class="page-item"><button class="page-link">Next</button></li>
-      </ul>
+      </ul> -->
     </div>
   </div>
   <footer class="mt-5 p-4 bg-dark text-white text-center">
