--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Movie Search</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="./style.css">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" /> -->
+  <!-- <link rel="stylesheet" href="./style.css"> -->
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
@@ -18,7 +19,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
         <!-- <a class="navbar-brand" href="javascript:void(0)">MovieSearch</a> -->
@@ -26,17 +27,6 @@
       </button>
       <div class="collapse navbar-collapse" id="mynavbar">
         <a class="navbar-brand me-auto" href="javascript:void(0)">MovieSearch</a>
-        <!-- <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Link</a>
-        </li>
-      </ul> -->
         <form id="search-form" class="d-flex">
           <!-- <label>Title</label> -->
           <input id="search-input" type="text" class="form-control me-2" placeholder="Search">
@@ -50,7 +40,7 @@
         </form>
       </div>
   </nav>
-  <div class="container">
+  <div class="container mt-5 pt-5">
     <div class="pagination-bar">
       <!-- <ul class="pagination justify-content-center" style="margin:20px 0">
         <li class="page-item"><button class="page-link">Previous</button></li>
@@ -61,7 +51,7 @@
         <li class="page-item"><button class="page-link">Next</button></li>
       </ul> -->
     </div>
-    <div id="container" class="container"></div>
+    <div id="container" class="container d-flex flex-wrap justify-content-center"></div>
     <div class="pagination-bar">
       <!-- <ul class="pagination justify-content-center" style="margin:20px 0">
         <li class="page-item"><button class="page-link">Previous</button></li>
@@ -73,10 +63,10 @@
     </div>
   </div>
   <footer class="mt-5 p-4 bg-dark text-white text-center">
-    <p>
-      Powered by <a href="https://www.themoviedb.org" target="_blank">themoviedb.org</a>
+    <div>
+      Data from <a href="https://www.themoviedb.org" target="_blank">themoviedb.org</a>
+    </div>
   </footer>
-  </p>
 </body>
 
 </html>
