--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Movie Search</title>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" /> -->
-  <!-- <link rel="stylesheet" href="./style.css"> -->
+
   <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
@@ -19,16 +19,14 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-        <!-- <a class="navbar-brand" href="javascript:void(0)">MovieSearch</a> -->
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="mynavbar">
         <a class="navbar-brand me-auto" href="javascript:void(0)">MovieSearch</a>
         <form id="search-form" class="d-flex">
-          <!-- <label>Title</label> -->
           <input id="search-input" type="text" class="form-control me-2" placeholder="Search">
           <input type="submit" value="Search" class="btn btn-primary me-2">
           <select id="select-lang" class="form-select">
@@ -41,28 +39,11 @@
       </div>
   </nav>
   <div class="container mt-5 pt-5">
-    <div class="pagination-bar">
-      <!-- <ul class="pagination justify-content-center" style="margin:20px 0">
-        <li class="page-item"><button class="page-link">Previous</button></li>
-        <li class="page-item active"><button class="page-link">1</button></li>
-        <li class="page-item"><button class="page-link">2</button></li>
-        <li class="page-item "><span class="page-link">...</span></li>
-        <li class="page-item"><button class="page-link">3</button></li>
-        <li class="page-item"><button class="page-link">Next</button></li>
-      </ul> -->
-    </div>
+    <div class="pagination-bar"></div>
     <div id="container" class="container d-flex flex-wrap justify-content-center"></div>
-    <div class="pagination-bar">
-      <!-- <ul class="pagination justify-content-center" style="margin:20px 0">
-        <li class="page-item"><button class="page-link">Previous</button></li>
-        <li class="page-item active"><button class="page-link">1</button></li>
-        <li class="page-item"><button class="page-link">2</button></li>
-        <li class="page-item"><button class="page-link">3</button></li>
-        <li class="page-item"><button class="page-link">Next</button></li>
-      </ul> -->
-    </div>
+    <div class="pagination-bar"></div>
   </div>
-  <footer class="mt-5 p-4 bg-dark text-white text-center">
+  <footer class="mt-5 p-4 text-center border-top border-primary">
     <div>
       Data from <a href="https://www.themoviedb.org" target="_blank">themoviedb.org</a>
     </div>
